# mcpy

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  NVALCHEMI_NOTES.md  README.md  hello.py  pyproject.toml  replica_T200.out  replica_T200.xyz  replica_T250.out  replica_T250.xyz  replica_T300.out  replica_T300.xyz  replica_T350.out  replica_T350.xyz  replica_T400.out  replica_T400.xyz  replica_T450.out  replica_T450.xyz  setup.py
benchmark/: README.md  batched_re_memory.csv  batched_re_memory.py  batched_re_memory_findings.md  batched_re_memory_summary.md  benchmark_alchemi_vs_mace.py  calculator.py  confirm_batched_re_safe.py  gcmc_alchemi.py  gcmc_compile_ab.py  gcmc_mace.py  gcmc_memory_growth.csv  gcmc_memory_growth.py  gcmc_memory_growth_exp.csv  gcmc_nano_benchmark.py  lammps_gcmc_parity.py  mace_gcmc_parity.py  probe_max_atoms.py  re_batched_scaling.csv  re_batched_scaling.py  re_batched_scaling_small.csv  re_batched_scaling_summary.md  re_batched_scaling_summary_small.md  relax_step_spread.py  verify_compact_parity.py  verify_compile_parity.py  verify_fcalc_chunk.py
docs/: bibliography.rst  calculators.rst  cells.rst  conf.py  ensembles.rst  examples.rst  first_simulation.rst  gcmc_acceptance_convention.rst  getting_started.rst  glossary.rst  index.rst  installation.rst  make_figures.py  molecular_adsorbates.rst  moves.rst  notebooks.rst  phase_diagrams.rst  requirements.txt  species_radii.rst
examples/: Al2O3.poscar  ago_gcmc.py  gcmc.py  gcmc_big_alchemi.py  gcmc_bimet_nano.py  gcmc_custom_cell.py  gcmc_molecule.py  gcmc_molecule_mace.py  gcmc_nano.py  gcmc_nano_alchemi.py  gcmc_nano_supported.py  gcmc_relaxation.py  grand_canonical_fcc111.py  grand_canonical_use.py  moves_seeds.txt  plot_supported_np.py  re_gcmc copy.py  re_gcmc.py  re_gcmc_batched.py  (+5 more)
(+195 files in other folders)
