[project]
name = "mcpy"
version = "1.2.0"
description = "A python package to run atomistic Monte Carlo simulations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.23.0",
    "mace-torch>=0.3.9",
#    "mpi4py>=4.0.3",
    "scikit-learn>=1.6.1",
]

[project.optional-dependencies]
# NVIDIA Alchemi (nvalchemi-toolkit) — GPU-native MACE evaluation + dynamics.
# Recommended for systems >= ~500 atoms on CUDA (see NVALCHEMI_NOTES.md).
# Requires CUDA toolkit and a compatible PyTorch build; install with:
#   pip install -e .[alchemi]
alchemi = [
    "nvalchemi-toolkit[mace]>=0.1.0",
]
test = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcpy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
